# Hospital-Management-System

./: CMakeLists.txt  Doctor.h  Hospital.cpp  Hospital.h  Nurse.h  Patient.h  README.md  main.cpp  mainwindow.cpp  mainwindow.h
